# nurse-shift-optimizer

./: .gitignore  README.md  policy.yaml  pyproject.toml  requirements.txt
.kiro/specs/shift-optimizer-refactor/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/看護師のシフト最適化/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
optimizer/: __init__.py  config.py  schemas.py  shift_model.py
optimizer/constraints/hard/: all_hard.py  availability.py  demand.py  limits.py  night_rules.py  patterns.py
optimizer/constraints/soft/: all_soft.py
optimizer/model/: base_model.py  variables.py
optimizer/objectives/: objective.py
scripts/: run_shift_demo.py  run_shift_web_ui.py
tests/: test_shift_model.py  test_web_ui_compat.py
